Integrate gpperfmon into top-level make system
- add new configure option `--enable-gpperfmon`
- include gpperfmon libraries into configure

Signed-off-by: Larry Hamel <lhamel@pivotal.io>
Signed-off-by: Chumki Roy <croy@pivotal.io>
Signed-off-by: Melanie Plageman <mplageman@pivotal.io>
Signed-off-by: Larry Hamel <lhamel@pivotal.io>
Signed-off-by: C.J. Jameson <cjameson@pivotal.io>

--- a/GNUmakefile.in
+++ b/GNUmakefile.in
@@ -28,6 +28,7 @@ all:
 	$(MAKE) -C contrib/pg_upgrade_support all
 	$(MAKE) -C contrib/pg_upgrade all
 	$(MAKE) -C gpAux/extensions mapreduce
+	$(MAKE) -C gpAux/gpperfmon all
 	@echo "All of Greenplum Database successfully made. Ready to install."
 
 install:
@@ -50,7 +51,7 @@ install:
 	$(MAKE) -C contrib/pg_upgrade $@
 	$(MAKE) -C gpMgmt $@
 	$(MAKE) -C gpAux/extensions $@
-
+	$(MAKE) -C gpAux/gpperfmon $@
 	@echo "Greenplum Database installation complete."
 
 installdirs uninstall:
@@ -100,6 +101,7 @@ clean:
 	$(MAKE) -C contrib/pg_upgrade_support $@
 	$(MAKE) -C contrib/pg_upgrade $@
 	$(MAKE) -C gpAux/extensions $@
+	$(MAKE) -C gpAux/gpperfmon $@
 	$(MAKE) -C gpMgmt $@
 # Garbage from autoconf:
 	@rm -rf autom4te.cache/
