--- a/gpAux/gpperfmon/src/gpmon/Makefile
+++ b/gpAux/gpperfmon/src/gpmon/Makefile
@@ -2,21 +2,20 @@ SHELL=/bin/bash
 
 default: all
 
-BLD_TOP=$(shell echo `pwd`/../../../)
-include $(BLD_TOP)/Makefile.global
-include $(BLD_TOP)/Makefile.thirdparty
+top_builddir = ../../../..
+include $(top_builddir)/src/Makefile.global
 
-EXT_DIR=$(BLD_TOP)/ext/$(BLD_ARCH)/
-LIBPQ_DIR=$(BLD_TOP)/../src/interfaces/libpq/
+LIBPQ_DIR=$(top_builddir)/src/interfaces/libpq
 
+# TODO: figure out what to do this "enterprise" variable
 osx105_x86_COPT=-Wl,-search_paths_first
-CC=$(strip $(BLD_CC) $(BLD_CFLAGS))
 COPT=$($(BLD_ARCH)_COPT)
 OPT=-g -O3 -Wall
 ifneq ($(CUSTOM_COPT),)
-	COPT=$(CUSTOM_COPT)
+COPT=$(CUSTOM_COPT)
 endif
 
+# only redhat has snmp, EMC related stuff due to DCA"
 ifneq "$(findstring $(BLD_ARCH),rhel5_x86_64 rhel6_x86_64 rhel7_x86_64)" ""
 CONNECTEMCLIB += -lemcconnect
 endif
@@ -26,20 +25,17 @@ GPMMON_OBJS=gpmmon.o gpmondb.o gpmonlib.o gpmon_agg.o
 GPSMON_OBJS=gpsmon.o gpmonlib.o
 SIGTEST_OBJS=sigartest.o
 
-INCS=-I$(EXT_DIR)/include -I$(EXT_DIR)/include/apr-1 -I$(BLD_TOP)/../src/include -I$(LIBPQ_DIR)
-LIBS=-L$(EXT_DIR)/lib -laprutil-1 -lapr-1 -levent $$($(EXT_DIR)/bin/apu-1-config --libs) $$($(EXT_DIR)/bin/apr-1-config --libs) 
+INCS = -I. $(CPPFLAGS) $(apr_includes) $(apr_cppflags) $(apu_includes) -I$(LIBPQ_DIR)
+override CFLAGS := $(CFLAGS) $(apu_cflags)
+
+LDLIBS = $(LDFLAGS) $(LIBS) -levent $(apu_link_ld_libs) $(apr_link_ld_libs)
+
 GPSMON_LIBS=
-GPMMON_LIBS=-L$(LIBPQ_DIR) -lpq -lm -lsnmp $(CONNECTEMCLIB)
-CFLAGS=$(OPT) $$($(EXT_DIR)/bin/apr-1-config --cflags) -Werror -Wall
-CPPFLAGS=$$($(EXT_DIR)/bin/apr-1-config --cppflags) -D$(BLD_ARCH)
+GPMMON_LIBS=-L$(LIBPQ_DIR) -lpq -lm
 
 ifeq "$(findstring osx,$(BLD_ARCH))" "osx"
-	GPSMON_LIBS=-framework CoreServices -framework IOKit
-	SIGTEST_LIBS=-framework CoreServices -framework IOKit
-endif
-
-ifeq (sol,$(findstring sol,$(BLD_ARCH)))
-	GPSMON_LIBS+=-lkstat
+GPSMON_LIBS=-framework CoreServices -framework IOKit
+SIGTEST_LIBS=-framework CoreServices -framework IOKit
 endif
 
 GPSMON_LIBS+= -lm -lsigar
@@ -48,18 +44,21 @@ SIGTEST_LIBS+= -lsigar
 all: gpsmon gpmmon
 
 gpsmon: $(GPSMON_OBJS)
-	$(CC) -o gpsmon $(COPT) $(GPSMON_OBJS) $(LIBS) $(GPSMON_LIBS)
+	$(CC) -o gpsmon $(COPT) $(GPSMON_OBJS) $(LDLIBS) $(GPSMON_LIBS)
 
 gpmmon: $(GPMMON_OBJS)
-	$(CC) -o gpmmon $(COPT) $(GPMMON_OBJS) $(LIBS) $(GPMMON_LIBS)
+	$(CC) -o gpmmon $(COPT) $(GPMMON_OBJS) $(LDLIBS) $(GPMMON_LIBS)
 
 sigartest: $(SIGTEST_OBJS)
-	$(CC) -o sigartest $(COPT) $(SIGTEST_OBJS) $(LIBS) $(GPSMON_LIBS)
+	$(CC) -o sigartest $(COPT) $(SIGTEST_OBJS) $(LDLIBS) $(GPSMON_LIBS)
 
 %.o: %.c
+ifeq ($(enable_gpperfmon),no)
+	$(error cannot build without --enable-gpperfmon in global configuration)
+endif
 	$(CC) $(INCS) $(CPPFLAGS) $(CFLAGS) $(COPT) -o $@ -c $<
 
-install:
+install: all
 	mkdir -p $(prefix)/bin
 	cp -p gpmmon $(prefix)/bin
 	cp -p gpsmon $(prefix)/bin
