--- a/src/bin/gp_session_state/gp_session_state.sql.in
+++ b/src/bin/gp_session_state/gp_session_state.sql.in
@@ -60,7 +60,7 @@ WITH all_entries AS (
             dirty_qe_count int,
             runaway_vmem_mb int, 
             runaway_command_cnt int,
-            last_idle_time timestamp with time zone
+            idle_start timestamp with time zone
           )
     UNION ALL
     SELECT C.*
@@ -74,7 +74,7 @@ WITH all_entries AS (
             dirty_qe_count int,
             runaway_vmem_mb int, 
             runaway_command_cnt int,
-            last_idle_time timestamp with time zone
+            idle_start timestamp with time zone
           ))
 SELECT S.datname, 
        M.sessionid as sess_id, 
@@ -88,7 +88,7 @@ SELECT S.datname,
        M.dirty_qe_count,
        M.runaway_vmem_mb, 
        M.runaway_command_cnt,
-       last_idle_time
+       idle_start
 FROM all_entries M LEFT OUTER JOIN 
 pg_stat_activity as S
 ON M.sessionid = S.sess_id;
