Remove net-snmp references

--- a/gpAux/gpperfmon/src/gpmon/Makefile
+++ b/gpAux/gpperfmon/src/gpmon/Makefile
@@ -18,15 +18,13 @@ ifneq ($(CUSTOM_COPT),)
 endif
 
 ifneq "$(findstring $(BLD_ARCH),rhel5_x86_64 rhel6_x86_64 rhel7_x86_64)" ""
-GPMMON_SNMP_OBJ=gpmon_snmp.o
 CONNECTEMCLIB += -lemcconnect
 endif
 
-GPMMON_OBJS=gpmmon.o gpmondb.o gpmonlib.o gpmon_agg.o $(GPMMON_SNMP_OBJ)
+GPMMON_OBJS=gpmmon.o gpmondb.o gpmonlib.o gpmon_agg.o
 
 GPSMON_OBJS=gpsmon.o gpmonlib.o
 SIGTEST_OBJS=sigartest.o
-SNMPTEST_OBJS=snmptest.o
 
 INCS=-I$(EXT_DIR)/include -I$(EXT_DIR)/include/apr-1 -I$(BLD_TOP)/../src/include -I$(LIBPQ_DIR)
 LIBS=-L$(EXT_DIR)/lib -laprutil-1 -lapr-1 -levent $$($(EXT_DIR)/bin/apu-1-config --libs) $$($(EXT_DIR)/bin/apr-1-config --libs) 
@@ -46,7 +44,6 @@ endif
 
 GPSMON_LIBS+= -lm -lsigar
 SIGTEST_LIBS+= -lsigar
-SNMPTEST_LIBS+= -lsnmp
 
 all: gpsmon gpmmon
 
@@ -59,11 +56,23 @@ gpmmon: $(GPMMON_OBJS)
 sigartest: $(SIGTEST_OBJS)
 	$(CC) -o sigartest $(COPT) $(SIGTEST_OBJS) $(LIBS) $(GPSMON_LIBS)
 
-snmptest: $(SNMPTEST_OBJS)
-	$(CC) -o snmptest $(COPT) $(SNMPTEST_OBJS) $(LIBS) $(SNMPTEST_LIBS)
-
 %.o: %.c
 	$(CC) $(INCS) $(CPPFLAGS) $(CFLAGS) $(COPT) -o $@ -c $<
+
+install:
+	mkdir -p $(prefix)/bin
+	cp -p gpmmon $(prefix)/bin
+	cp -p gpsmon $(prefix)/bin
+	cp -p gpperfmoncat.sh $(prefix)/bin
+	cp -p gpmon_catqrynow.py $(prefix)/sbin
+	cp -p gpperfmon_install $(prefix)/bin
+	mkdir -p $(prefix)/lib/gpperfmon
+	cp -p gpperfmon3.sql $(prefix)/lib/gpperfmon
+	cp -p gpperfmon4.sql $(prefix)/lib/gpperfmon
+	cp -p gpperfmon41.sql $(prefix)/lib/gpperfmon
+	cp -p gpperfmon42.sql $(prefix)/lib/gpperfmon
+	cp -p gpperfmonC.sql $(prefix)/lib/gpperfmon
+
 
 clean:
 	rm -rf *.o gpmmon gpsmon sigartest
