--- a/gpAux/Makefile
+++ b/gpAux/Makefile
@@ -30,7 +30,7 @@ all : devel
 # Internal functions which are invoked by other rules within this makefile
 .PHONY : mkgpfdist mkgpperfmon copydocs mgmtcopy copylibs
 .PHONY : greenplum_path RECONFIG HOMEDEP GPROOTDEP GPROOTDEP GPROOTFAIL
-.PHONY : gccVersionCheck clients loaders connectivity gppkg
+.PHONY : gccVersionCheck clients loaders gppkg
 
 #---------------------------------------------------------------------
 # Make 3rd-party libraries and tools
@@ -76,13 +76,11 @@ RELEASE=devel
 GPDIR=greenplum-db-$(RELEASE)
 PLRDIR=greenplum-plr-$(RELEASE)
 CLIENTDIR=greenplum-clients-$(RELEASE)
-CONNECTIVITYDIR=greenplum-connectivity-$(RELEASE)
 LOADERSDIR=greenplum-loaders-$(RELEASE)
 GPDOCDIR=$(CURDIR)/docs/release
 
 DISTPATH=$(GPROOT)/$(GPDIR)
 CLIENTDISTPATH=$(GPROOT)/$(CLIENTDIR)
-CONNECTIVITYDISTPATH=$(GPROOT)/$(CONNECTIVITYDIR)
 LOADERSDISTPATH=$(GPROOT)/$(LOADERSDIR)
 GPPERFMONDISTPATH=$(GPROOT)
 GPPKGDISTPATH=$(GPROOT)
@@ -93,7 +91,6 @@ DEVPATH=$(BLD_HOME)/$(GPDIR)
 GPPERFMONDEVPATH=$(BLD_HOME)
 GPPKGDEVPATH=$(BLD_HOME)
 CLIENTDEVPATH=$(BLD_HOME)/$(CLIENTDIR)
-CONNECTIVITYDEVPATH=$(BLD_HOME)/$(CONNECTIVITYDIR)
 LOADERSDEVPATH=$(BLD_HOME)/$(LOADERSDIR)
 else
 # DEVPATH has been passed in as by the build scripts
@@ -101,7 +98,6 @@ GPROOT_DEV=$(dir $(DEVPATH))
 GPPERFMONDEVPATH=$(GPROOT_DEV)
 GPPKGDEVPATH=$(GPROOT_DEV)
 CLIENTDEVPATH=$(GPROOT_DEV)$(CLIENTDIR)
-CONNECTIVITYDEVPATH=$(GPROOT_DEV)$(CONNECTIVITYDIR)
 LOADERSDEVPATH=$(GPROOT_DEV)$(LOADERSDIR)
 endif
 
@@ -339,14 +335,11 @@ define BUILD_STEPS
 	@$(MAKE) copylibs INSTLOC=$(INSTLOC)
 	@$(MAKE) clients INSTLOC=$(INSTLOC) CLIENTINSTLOC=$(CLIENTINSTLOC)
 	@$(MAKE) set_scripts_version INSTLOC=$(CLIENTINSTLOC)
-	@$(MAKE) connectivity INSTLOC=$(INSTLOC) CONNECTIVITYINSTLOC=$(CONNECTIVITYINSTLOC)
-	@$(MAKE) set_scripts_version INSTLOC=$(CONNECTIVITYINSTLOC)
 	@$(MAKE) loaders INSTLOC=$(INSTLOC) LOADERSINSTLOC=$(LOADERSINSTLOC)
 	@$(MAKE) set_scripts_version INSTLOC=$(LOADERSINSTLOC)
 	@$(MAKE) set_scripts_version INSTLOC=$(CLIENTINSTLOC)
 	@$(MAKE) copylicense INSTLOC=$(INSTLOC) \
                          CLIENTINSTLOC=$(CLIENTINSTLOC) \
-                         CONNECTIVITYINSTLOC=$(CONNECTIVITYINSTLOC) \
                          LOADERSINSTLOC=$(LOADERSINSTLOC)
 	@$(MAKE) gppkg INSTLOC=$(INSTLOC) GPPKGINSTLOC=$(GPPKGINSTLOC)
 endef
@@ -360,8 +353,6 @@ define BUILD_STEPS
 	@$(MAKE) copylibs INSTLOC=$(INSTLOC)
 	@$(MAKE) loaders INSTLOC=$(INSTLOC) LOADERSINSTLOC=$(LOADERSINSTLOC)
 	@$(MAKE) set_scripts_version INSTLOC=$(LOADERSINSTLOC)
-	@$(MAKE) connectivity INSTLOC=$(INSTLOC) CONNECTIVITYINSTLOC=$(CONNECTIVITYINSTLOC)
-	@$(MAKE) set_scripts_version INSTLOC=$(CONNECTIVITYINSTLOC)
 endef
 endif
 
@@ -396,7 +387,6 @@ define BUILD_STEPS
 	cp -p $(GPMGMT)/bin/gpload.py $(INSTLOC)/bin/gpload.py
 	$(MAKE) copylibs INSTLOC=$(INSTLOC)
 	$(MAKE) clients INSTLOC=$(INSTLOC) CLIENTINSTLOC=$(CLIENTINSTLOC)
-	$(MAKE) connectivity INSTLOC=$(INSTLOC) CONNECTIVITYINSTLOC=$(CONNECTIVITYINSTLOC)
 	if [ "$(findstring hpux_ia64,$(BLD_ARCH))" = "hpux_ia64" ]; then \
 	  cd $(GPMGMT)/bin && $(MAKE) pygresql LDFLAGS="" INSTLOC=$(INSTLOC) ; \
 	elif [ "$(findstring win,$(BLD_ARCH))" != "win" ]; then \
@@ -431,7 +421,6 @@ endif
 devel : INSTCFLAGS=$(DEBUGFLAGS)
 devel : INSTLOC=$(DEVPATH)
 devel : CLIENTINSTLOC=$(CLIENTDEVPATH)
-devel : CONNECTIVITYINSTLOC=$(CONNECTIVITYDEVPATH)
 devel : LOADERSINSTLOC=$(LOADERSDEVPATH)
 devel : GPPERFMONINSTLOC=$(GPPERFMONDEVPATH)
 devel : GPPKGINSTLOC=$(GPPKGDEVPATH)
@@ -452,7 +441,6 @@ endif
 dist : INSTCFLAGS=$(OPTFLAGS)
 dist : INSTLOC=$(DISTPATH)
 dist : CLIENTINSTLOC=$(CLIENTDISTPATH)
-dist : CONNECTIVITYINSTLOC=$(CONNECTIVITYDISTPATH)
 dist : LOADERSINSTLOC=$(LOADERSDISTPATH)
 dist : GPPERFMONINSTLOC=$(GPPERFMONDISTPATH)
 dist : GPPKGINSTLOC=$(GPPKGDISTPATH)
@@ -471,7 +459,6 @@ endif
 dist_prof : INSTCFLAGS=$(PROFFLAGS)
 dist_prof : INSTLOC=$(DISTPATH)
 dist_prof : CLIENTINSTLOC=$(CLIENTDISTPATH)
-dist_prof : CONNECTIVITYINSTLOC=$(CONNECTIVITYDISTPATH)
 dist_prof : LOADERSINSTLOC=$(LOADERSDISTPATH)
 dist_prof : GPPERFMONINSTLOC=$(GPPERFMONDISTPATH)
 dist_prof : CONFIGFLAGS+= --enable-testutils
@@ -486,7 +473,6 @@ endif
 	$(BUILD_STEPS)
 
 dist_faultinj : CLIENTINSTLOC=$(CLIENTDISTPATH)
-dist_faultinj : CONNECTIVITYINSTLOC=$(CONNECTIVITYDISTPATH)
 dist_faultinj : LOADERSINSTLOC=$(LOADERSDISTPATH)
 dist_faultinj : CONFIGFLAGS+= --enable-testutils --enable-debugbreak
 ifdef ENABLE_VPATH_BUILD
@@ -509,11 +495,9 @@ endif
 
 ifneq "$(GPROOT)" ""
 CLIENT_HOME_DIR=$(GPROOT)
-CONNECTIVITY_HOME_DIR=$(GPROOT)
 LOADERS_HOME_DIR=$(GPROOT)
 else
 CLIENT_HOME_DIR=$(BLD_HOME)
-CONNECTIVITY_HOME_DIR=$(BLD_HOME)
 dist_faultinj : CLIENTINSTLOC=$(CLIENTDISTPATH)
 LOADERS_HOME_DIR=$(BLD_HOME)
 endif
@@ -534,11 +518,6 @@ LOADERSINSTLOC_LIB_PWARE=$(LOADERSINSTLOC)/lib/pware
 LOADERSINSTLOC_DOCS=$(LOADERSINSTLOC)/docs
 LOADERSINSTLOC_OPENSOURCE=$(LOADERSINSTLOC)/thirdparty
 
-CONNECTIVITYINSTLOC=$(CONNECTIVITY_HOME_DIR)/greenplum-connectivity
-CONNECTIVITYINSTLOC_LIB=$(CONNECTIVITYINSTLOC)/lib
-CONNECTIVITYINSTLOC_INCLUDE=$(CONNECTIVITYINSTLOC)/include
-CONNECTIVITYINSTLOC_DOCS=$(CONNECTIVITYINSTLOC)/docs
-CONNECTIVITYINSTLOC_OPENSOURCE=$(CONNECTIVITYINSTLOC)/thirdparty
 
 ifneq "$(findstring win,$(BLD_ARCH))" "win"
 DOC_TYPE=Unix
@@ -651,37 +630,6 @@ ifeq "$(findstring win,$(BLD_ARCH))" "win"
 BLD_PACKAGING_PID:=$(shell ssh build@harpy 'echo $$$$')
 endif
 
-connectivity :
-	@if [ ! -z "$(CONNECTIVITYINSTLOC)" ] && [ "$(CONNECTIVITYINSTLOC)" != "/" ]; then \
-	  echo "rm -rf $(CONNECTIVITYINSTLOC)"; \
-	  rm -rf $(CONNECTIVITYINSTLOC); \
-	fi
-ifeq "$(findstring connectivity,$(BLD_TARGETS))" ""
-	# ---- build and packaging of the Connectivity package is currently disabled;
-	# ---- set BLD_TARGETS="connectivity" to enable them.
-else
-	# ---- load LD_LIBRARY_PATH with the GPDB library set and build the ODBC drivers ----
-	cd $(INSTLOC)/ && \
-	  . ./greenplum_path.sh; \
-	# ---- copy GPDB fileset ----
-	mkdir -p $(CONNECTIVITYINSTLOC_LIB)
-	(cd $(INSTLOC)/lib && $(TAR) cf - *) | (cd $(CONNECTIVITYINSTLOC_LIB)/ && $(TAR) xvpf -)$(check_pipe_for_errors)
-	mkdir -p $(CONNECTIVITYINSTLOC_INCLUDE)
-	(cd $(INSTLOC)/include && $(TAR) cf - *) | (cd $(CONNECTIVITYINSTLOC_INCLUDE)/ && $(TAR) xvpf -)$(check_pipe_for_errors)
-
-	# ---- copy license files ----
-	cp ${BLD_TOP}/../LICENSE $(CONNECTIVITYINSTLOC)
-	cp ${BLD_TOP}/../NOTICE $(CONNECTIVITYINSTLOC)
-
-	# ---- create the installer ----
-	$(warn MPP_ARCH=$(MPP_ARCH))
-
-	# ---- updating the version in required packages ----
-	@$(MAKE) set_scripts_version INSTLOC=$(CONNECTIVITYINSTLOC)
-  cd client/install/src/unix/ && \
-     $(MAKE) TAR=$(TAR) PRODUCT=Connectivity PACKAGE=greenplum-connectivity README=GPConnectUnix VERSION=$(VERSION) INSTALL_SRC=$(CONNECTIVITYINSTLOC) INSTALL_DIR=../../../..
-
-endif
 
 clients :
 	if [ ! -z "$(CLIENTINSTLOC)" ] && [ "$(CLIENTINSTLOC)" != "/" ]; then rm -rf $(CLIENTINSTLOC); fi
@@ -708,8 +656,8 @@ endif
 
 	# ---- Updating the version in required packages ----
 	@$(MAKE) set_scripts_version INSTLOC=$(CLIENTINSTLOC)
-  cd client/install/src/unix/ && \
-      $(MAKE) TAR=$(TAR) PRODUCT=Clients PACKAGE=greenplum-clients README=GPClientToolsUnix VERSION=`perl -pe 's, ,-,g' ../../../../../VERSION` INSTALL_SRC=$(CLIENTINSTLOC) INSTALL_DIR=../../../..
+	cd client/install/src/unix/ && \
+	$(MAKE) TAR=$(TAR) PRODUCT=Clients PACKAGE=greenplum-clients README=GPClientToolsUnix VERSION=`perl -pe 's, ,-,g' ../../../../../VERSION` INSTALL_SRC=$(CLIENTINSTLOC) INSTALL_DIR=../../../..
 
 endif
 
@@ -761,8 +709,8 @@ endif
 
 	# ---- updating the version in required packages ----
 	@$(MAKE) set_scripts_version INSTLOC=$(LOADERSINSTLOC)
-  cd client/install/src/unix/ && \
-      $(MAKE) TAR=$(TAR) PRODUCT=Loaders PACKAGE=greenplum-loaders README=GPLoadToolsUnix VERSION=`perl -pe 's, ,-,g' ../../../../../VERSION` INSTALL_SRC=$(LOADERSINSTLOC) INSTALL_DIR=../../../..
+	cd client/install/src/unix/ && \
+	$(MAKE) TAR=$(TAR) PRODUCT=Loaders PACKAGE=greenplum-loaders README=GPLoadToolsUnix VERSION=`perl -pe 's, ,-,g' ../../../../../VERSION` INSTALL_SRC=$(LOADERSINSTLOC) INSTALL_DIR=../../../..
 
 endif
 
@@ -1080,7 +1028,7 @@ greenplum_path:
 	  releng/generate-greenplum-path.sh $(INSTLOC) > $(INSTLOC)/greenplum_path.sh
 
 copylicense:
-	for proddir in $(INSTLOC) $(CLIENTINSTLOC) $(CONNECTIVITYINSTLOC) $(LOADERSINSTLOC); do \
+	for proddir in $(INSTLOC) $(CLIENTINSTLOC) $(LOADERSINSTLOC); do \
 	   if [ -d $${proddir} ]; then \
 	      echo cp -v ${BLD_TOP}/LICENSE $${proddir}; \
 	      echo cp -v ${BLD_TOP}/NOTICE  $${proddir}; \
