--- a/gpAux/Makefile.global
+++ b/gpAux/Makefile.global
@@ -93,13 +93,18 @@ sol10_sparc_64_PYTHONHOME=$(BLD_THIRDPARTY_DIR)/python-2.7.12
 sol10_sparc_32_PYTHONHOME=/opt/python32-2.5.1
 suse10_x86_64_PYTHONHOME=$(BLD_THIRDPARTY_DIR)/python-2.7.12
 suse11_x86_64_PYTHONHOME=$(BLD_THIRDPARTY_DIR)/python-2.7.12
+ifneq "$($(BLD_ARCH)_PYTHONHOME)" ""
 export PYTHONHOME=$($(BLD_ARCH)_PYTHONHOME)
+endif
 
-PYTHON=$(PYTHONHOME)/bin/python
+export PYTHON=python
+ifneq "$(PYTHONHOME)" ""
+export PYTHON=$(PYTHONHOME)/bin/python
 aix5_ppc_32_PYTHON=$(PYTHONHOME)/bin/python2.7
 aix5_ppc_64_PYTHON=$(PYTHONHOME)/bin/python2.7_64
 ifneq "$($(BLD_ARCH)_PYTHON)" ""
 export PYTHON=$($(BLD_ARCH)_PYTHON)
+endif
 endif
 
 # if PYTHONHOME was specified above, use it for the build
