--- a/gpAux/extensions/Makefile
+++ b/gpAux/extensions/Makefile
@@ -78,8 +78,12 @@ JAR=${JAVA_HOME}/bin/jar
 JAVADOC=${JAVA_HOME}/bin/javadoc
 
 
+.PHONY:
+mkorafce:
+	PATH=$(INSTLOC)/bin:$(PATH) $(MAKE) -C orafce install USE_PGXS=1
 
 installcheck:
 	if [ -d "$(ext_dir)" ]; then \
+		PATH=$(INSTLOC)/bin:$(PATH) $(MAKE) -C orafce installcheck USE_PGXS=1 && \
 		PATH=$(INSTLOC)/bin:$(PATH) $(MAKE) -C gphdfs installcheck USE_PGXS=1 ; \
 	fi
