Move gp_session_state to contrib/gp_internal_tools
src/bin was an incorrect location for gp_session_state, and while
contrib might not be ideal it's better than src/bin at least. Move
into the gp_internal_tools contrib module which contains various
Greenplum specific management functions and views. During the next
release cycle we should perhaps make this a proper backend function
and move it into gp_toolkit but for now lets collect these utils in
one place.

--- a/contrib/gp_internal_tools/Makefile
+++ b/contrib/gp_internal_tools/Makefile
@@ -1,4 +1,5 @@
-MODULES    = gp_ao_co_diagnostics gp_workfile_mgr
+MODULES    = gp_ao_co_diagnostics gp_workfile_mgr gp_session_state_memory_stats
+DATA       = gp_session_state.sql uninstall_gp_session_state.sql
 
 PG_CPPFLAGS = -I$(libpq_srcdir)
 
