gpperfmon and coverity: resolve issues with `make distclean`
The coverity build was failing on the gpperfmon `make distclean` step

Fixed on both sides:
- Don't call `make distclean` in the coverity build script -- not
  necessary
- Don't clean gpperfmon from `gpAux/Makefile`: this Makefile's clean
  targets are for enterprise-build related artifacts. General developers
  should be running `make clean distclean` from the top level directory of
  this repository.

Additional fix -- doesn't address the coverity red but a similar
cleanup:
- Add cleanup of gpperfmon to the top level makefile's `distclean`
  target. Not sure why it wasn't there; probably just an accidental
  omission.
- Add note explaining why the top level makefile has to circumvent
  `gpAux/Makefile`

Signed-off-by: Melanie Plageman <mplageman@pivotal.io>

--- a/GNUmakefile.in
+++ b/GNUmakefile.in
@@ -104,6 +104,9 @@ clean:
 	$(MAKE) -C contrib/pg_upgrade_support $@
 	$(MAKE) -C contrib/pg_upgrade $@
 	$(MAKE) -C contrib/pgcrypto $@
+# leap over gpAux/Makefile into subdirectories to avoid circular dependency.
+# gpAux/Makefile is the entry point for the enterprise build, which ends up
+# calling top-level configure and this Makefile
 	$(MAKE) -C gpAux/extensions $@
 	$(MAKE) -C gpAux/gpperfmon $@
 	$(MAKE) -C gpMgmt $@
@@ -115,6 +118,7 @@ clean:
 distclean maintainer-clean:
 #	-$(MAKE) -C doc $@
 	-$(MAKE) -C gpAux/extensions $@
+	-$(MAKE) -C gpAux/gpperfmon $@
 	-$(MAKE) -C contrib $@
 	-$(MAKE) -C config $@
 	-$(MAKE) -C src $@
