Fixed issues with CL packaging
  - now correctly finds header
  - used `getversion` to generate file name
  - Using `getversion --short` for GPDB version string

--- a/gpAux/client/install/src/unix/Makefile
+++ b/gpAux/client/install/src/unix/Makefile
@@ -14,7 +14,8 @@ INSTALLER_HEADER=${WORK_DIR}/installer-header.txt
 PRODUCT=Clients
 PACKAGE=greenplum-clients
 README=GPClientToolsUnix
-INSTALLER_NAME=${PACKAGE}-${VERSION}
+GP_VERSION=$(shell ${BLD_TOP}/../getversion --short)
+INSTALLER_NAME=${PACKAGE}-${GP_VERSION}
 INSTALL_DIR=${WORK_DIR}/../../../..
 INSTALL_SRC=${INSTALL_DIR}/${PACKAGE}
 DATESTAMP=`date +%d%m%y`
