Adds make nuke-cluster and create-cluster
Signed-off-by: Todd Sedano <tsedano@pivotal.io>

--- a/gpAux/gpdemo/Makefile
+++ b/gpAux/gpdemo/Makefile
@@ -50,3 +50,9 @@ clean:
 	@echo ""
 
 .PHONY: all cluster probe clean check clean
+
+nuke-cluster:
+	@./nuke-cluster.sh
+
+create-cluster:
+	@./create-cluster.sh
