--- a/src/test/performance/expected/setup.out.template
+++ b/src/test/performance/expected/setup.out.template
@@ -10,11 +10,11 @@ INSERT INTO base_table SELECT * FROM ext_base_table;
 --
 -- Create the tables to be used for performance testing
 --
-CREATE TABLE ao_bs8192 (like base_table) WITH (appendonly=true, blocksize=8192);
-CREATE TABLE ao_bs32768 (like base_table) WITH (appendonly=true, blocksize=32768);
-CREATE TABLE ao_bs524288 (like base_table) WITH (appendonly=true, blocksize=524288);
-CREATE TABLE ao_zlib_bs8192 (like base_table) WITH (appendonly=true, compresstype=zlib, blocksize=8192);
-CREATE TABLE aoco_bs8192 (like base_table) WITH (appendonly=true, orientation=column, blocksize=8192);
-CREATE TABLE aoco_bs32768 (like base_table) WITH (appendonly=true, orientation=column, blocksize=32768);
-CREATE TABLE aoco_bs524288 (like base_table) WITH (appendonly=true, orientation=column, blocksize=524288);
-CREATE TABLE aoco_zlib_bs8192 (like base_table) WITH (appendonly=true, orientation=column, compresstype=zlib, blocksize=8192);
+CREATE TABLE ao_blocksz8192 (like base_table) WITH (appendonly=true, blocksize=8192);
+CREATE TABLE ao_blocksz32768 (like base_table) WITH (appendonly=true, blocksize=32768);
+CREATE TABLE ao_blocksz524288 (like base_table) WITH (appendonly=true, blocksize=524288);
+CREATE TABLE ao_zlib_blocksz8192 (like base_table) WITH (appendonly=true, compresstype=zlib, blocksize=8192);
+CREATE TABLE aoco_blocksz8192 (like base_table) WITH (appendonly=true, orientation=column, blocksize=8192);
+CREATE TABLE aoco_blocksz32768 (like base_table) WITH (appendonly=true, orientation=column, blocksize=32768);
+CREATE TABLE aoco_blocksz524288 (like base_table) WITH (appendonly=true, orientation=column, blocksize=524288);
+CREATE TABLE aoco_zlib_blocksz8192 (like base_table) WITH (appendonly=true, orientation=column, compresstype=zlib, blocksize=8192);
